# tappr

./: .gitignore  CLAUDE.md  Cargo.toml  Cross.toml  LICENSE  README.md
.claude/: settings.local.json
.github/workflows/: release.yml
examples/: test_audio.rs  test_looping.rs  test_stereo.rs
scripts/: install.cmd  install.ps1  install.sh
src/: app.rs  cli.rs  error.rs  main.rs
src/audio/: buffer.rs  classifier.rs  decode.rs  mod.rs  quantize.rs  stream.rs  stretch.rs
src/playback/: engine.rs  mod.rs  source.rs
src/radio/: cache.rs  client.rs  mod.rs  types.rs
src/tasks/: channels.rs  mod.rs  producer.rs
src/tui/: app.rs  mod.rs
src/tui/widgets/: mod.rs  now_playing.rs  settings.rs  up_next.rs  world_map.rs
