[package]
name = "tappr"
version = "0.1.0"
edition = "2021"
description = "Ride the beat of the world's airwaves"
license = "MIT"
authors = ["Jonas Michel"]
repository = "https://github.com/jonasrmichel/tappr"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# HTTP
reqwest = { version = "0.12", features = ["json", "stream"] }
urlencoding = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Audio
rodio = "0.19"
bytemuck = { version = "1", features = ["derive"] }
ssstretch = "0.1"

# TUI
ratatui = { version = "0.29", features = ["all-widgets"] }
crossterm = "0.28"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
dirs = "5"
rand = "0.8"
thiserror = "2"
parking_lot = "0.12"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
